--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pipenv
-        pipenv install
+        pipenv install --python ${{ matrix.python-version }}
         
     - name: Lint with ruff
       run: pipenv run ruff check
