--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,3 +31,6 @@ jobs:
         
     - name: Lint with ruff
       run: pipenv run ruff check
+
+    - name: Test with pytest
+      run: pipenv run pytest
