--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    assignees: ["guerda"]
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
