--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,11 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pipenv
-        pipenv install --dev --python ${{ matrix.python-version }}
+        python -m pip install uv
+        uv sync --dev --python ${{ matrix.python-version }}
         
     - name: Lint with ruff
-      run: pipenv run ruff check
+      run: uv run ruff check
 
     - name: Test with pytest
-      run: pipenv run pytest
+      run: uv run pytest
