ci: inject secret as environment variable

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,4 +33,6 @@ jobs:
       run: uv run ruff check
 
     - name: Test with pytest
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       run: uv run pytest
